<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/idTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/mesure_de_niveau_de_glycemie"
        android:textColor="@color/Queen_Blue"
        android:textSize="30sp"
        android:textStyle="bold|normal" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/votre_ge"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/Eyeshadow_Blue"
        />
    <SeekBar
        android:id="@+id/sbage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:max="100"
        />
    <TextView
        android:id="@+id/id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/est_ce_que_vous_je_nez"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/Eyeshadow_Blue"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp">
        <RadioButton
            android:id="@+id/rbtOui"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/oui"
            android:textColor="@color/Queen_Blue"
            android:textSize="18sp" />
        <RadioButton
        android:id="@+id/rbtnon"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/non"
        android:textColor="@color/Queen_Blue"
        android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/etValeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/valeur_mesur_e_en_mmol_l"
        android:inputType="numberDecimal"
        android:textColorHint="@color/shipmate_Blue"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/consulter"
        android:textSize="18sp"
        android:textColor="@color/Eyeshadow_Blue"
        />
    <TextView
        android:id="@+id/tvReponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/Eyeshadow_Blue"
        android:text="..."
        />
</LinearLayout>